fixed overflow

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 1.2rem;
 	text-transform: uppercase;
+	overflow-x: hidden;
 }
 
 img {
@@ -92,7 +93,6 @@ nav ul {
 
 nav ul li {
 	flex-wrap: nowrap;
-	
 }
 
 nav ul li a {
